@@ -52,6 +52,7 @@ static void compatInit(Compatibility_t &c)
     c.fix_keyhole_framerate = true;
     c.fix_link_clowncar_fairy = true;
     c.fix_dont_switch_player_by_clowncar = true;
+    c.enable_multipoints = true;
 
     if(g_speedRunnerMode >= SPEEDRUN_MODE_2) // Make sure that bugs were same as on SMBX2 Beta 4 on this moment
     {
@@ -68,6 +69,7 @@ static void compatInit(Compatibility_t &c)
         c.fix_keyhole_framerate = false;
         c.fix_link_clowncar_fairy = false;
         c.fix_dont_switch_player_by_clowncar = false;
+        c.enable_multipoints = false;
     }
 
     if(g_speedRunnerMode >= SPEEDRUN_MODE_3) // Strict vanilla SMBX
@@ -111,6 +113,7 @@ static void loadCompatIni(Compatibility_t &c, const std::string &fileName)
         compat.read("fix-keyhole-framerate", c.fix_keyhole_framerate, c.fix_keyhole_framerate);
         compat.read("fix-link-clowncar-fairy", c.fix_link_clowncar_fairy, c.fix_link_clowncar_fairy);
         compat.read("fix-dont-switch-player-by-clowncar", c.fix_dont_switch_player_by_clowncar, c.fix_dont_switch_player_by_clowncar);
+        compat.read("enable-multipoints", c.enable_multipoints, c.enable_multipoints);
     }
     compat.read("fix-player-filter-bounce", c.fix_player_filter_bounce, c.fix_player_filter_bounce);
     compat.read("fix-player-downward-clip", c.fix_player_downward_clip, c.fix_player_downward_clip);
